Added extra bus messages to dashboard.

--- a/Modules/Sales/Module/Components/SellControls.razor
+++ b/Modules/Sales/Module/Components/SellControls.razor
@@ -1,7 +1,7 @@
 ﻿@implements IDisposable
 @inject StockDb StockDb
 <p>
-    Current rate: colour worth @FormatMoney(_currentWorth.ExchangeRate)
+    Current colour exchange rate: @FormatMoney(_currentWorth.ExchangeRate)
     <ul>
         <li>@_currentWorth.WhitePackageCount x White Package (@FormatMoney(_currentWorth.UnitWhitePackageWorth) per package) = @FormatMoney(_currentWorth.WhitePackageWorth)</li>
         <li>@_currentWorth.YellowPackageCount x Yellow Package (@FormatMoney(_currentWorth.UnitColourPackageWorth) per package) = @FormatMoney(_currentWorth.YellowPackageWorth)</li>
