--- a/Modules/Mixing/Client/Pages/Index.razor
+++ b/Modules/Mixing/Client/Pages/Index.razor
@@ -4,7 +4,7 @@
 
 <p>This is the colour mixing module.  It mixes primary colours generated from the generation module to make secondary colours.</p>
 
-<p>This modules uses Blazor client-side.</p>
+<p>This modules uses Blazor client-side for its pages, and Blazor server-side to host (the same) controls in an iframe.</p>
 
 <p>
     <a href="mix">Mix Colours</a>
