Resized iframe as document content changes.

--- a/Modules/Sales/Module/Pages/_Control.cshtml
+++ b/Modules/Sales/Module/Pages/_Control.cshtml
@@ -31,6 +31,7 @@
     <script src="~/_content/MfePoc.Shared/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/_content/MfePoc.Shared/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/_content/MfePoc.Shared/js/mfeNotify.js" asp-append-version="true"></script>
+    <script src="~/_content/MfePoc.Shared/js/resizeIframe.js" asp-append-version="true"></script>
 
     <script src="/Sales/_framework/blazor.server.js"></script>
     <script>
