--- a/Modules/Sales/Module/Components/SellControls.razor
+++ b/Modules/Sales/Module/Components/SellControls.razor
@@ -1,4 +1,5 @@
 ﻿@implements IDisposable
+@inject IJSRuntime Js
 @inject StockDb StockDb
 <p>
     Current colour exchange rate: @FormatMoney(_currentWorth.ExchangeRate)
@@ -14,7 +15,7 @@
     Total: @FormatMoney(_currentWorth.TotalWorth)
 </p>
 
-<button class="btn btn-primary" @onclick=Sell>Sell</button>
+<button class="btn btn-primary" @onclick=Sell disabled=@(_currentWorth.TotalWorth == 0m)>Sell</button>
 
 @code {
     private StockDb.CurrentWorth _currentWorth;
@@ -24,6 +25,12 @@
         StockDb.OnStockUpdateAsync += Refresh;
         await Refresh();
         base.OnInitialized();
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        await base.OnAfterRenderAsync(firstRender);
+        await Js.InvokeVoidAsync("resizeIframe");
     }
 
     void IDisposable.Dispose()
