--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -98,6 +98,7 @@
     <script src="~/_content/MfePoc.Shared/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/_content/MfePoc.Shared/lib/bootstrap-notify/dist/bootstrap-notify.min.js"></script>
     <script src="~/_content/MfePoc.Shared/js/mfeNotify.js" asp-append-version="true"></script>
+    <script src="~/_content/MfePoc.Shared/js/resizeIframe.js" asp-append-version="true"></script>
 
     @if (!string.IsNullOrWhiteSpace(layoutModel.CustomScript))
     {
