Added initial structure for reporting.

--- a/Home/Views/Home/Index.cshtml
+++ b/Home/Views/Home/Index.cshtml
@@ -20,6 +20,7 @@
 </p>
 <p>
     Each technology is hosted in its own process.
+    There is no database, so if the application is left idle, or a deployments restarts it, all the data resets to zero.
 </p>
 <p>
     GitHub repository:
