--- a/Modules/Reporting/Client/Pages/Index.razor
+++ b/Modules/Reporting/Client/Pages/Index.razor
@@ -1,7 +1,11 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h2>Colour Reporting Service</h2>
 
-Welcome to your new app.
+<p>This is the colour reporting module.  It reports on the sales of colours made.</p>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<p>This modules uses Blazor client-side.</p>
+
+<SalesReport />
+
+<HostDetail />
