--- a/Modules/Reporting/Server/Pages/_Host.cshtml
+++ b/Modules/Reporting/Server/Pages/_Host.cshtml
@@ -6,8 +6,7 @@
     this.SetAppLayout(
         title: "Reporting",
         baseUrl: "/Reporting/",
-        enableBlazorClientSide: true,
-        clientStyles: "MfePoc.Reporting.Client.styles.css");
+        enableBlazorClientSide: true);
 }
 
 <div id="app">Loading...</div>
