--- a/Modules/Reporting/Client/_Imports.razor
+++ b/Modules/Reporting/Client/_Imports.razor
@@ -7,4 +7,4 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using MfePoc.Reporting.Client
-@using MfePoc.Reporting.Client.Shared
+@using MfePoc.Reporting.Client.Components
