Added sales to report.

--- a/Modules/Reporting/Client/Components/SalesReport.razor
+++ b/Modules/Reporting/Client/Components/SalesReport.razor
@@ -1,26 +1,51 @@
 ﻿@inject NavigationManager NavManager
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>Date/Time</th>
-            <th>Description</th>
-            <th>Amount</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td colspan="3">No sales executed.</td>
-        </tr>
-        <tr>
-            <td>2004-03-02 12:32</td>
-            <td>Some stuff</td>
-            <td>£123.00</td>
-        </tr>
-    </tbody>
-</table>
+@if (_sales != null)
+{
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Date/Time</th>
+                <th>Description</th>
+                <th>Amount</th>
+            </tr>
+        </thead>
+        <tbody>
+            @if (_sales.Items?.Count == 0)
+            {
+                <tr>
+                    <td colspan="3" style="text-align: center;">No sales executed.</td>
+                </tr>
+            }
+            else
+            {
+                <tr>
+                    <td>2004-03-02 12:32</td>
+                    <td>Some stuff</td>
+                    <td>£123.00</td>
+                </tr>
+            }
+        </tbody>
+    </table>
 
-<p style="margin-top: 20px;">Total: £123.45</p>
+    <p style="margin-top: 20px;">Total: @($"£{_sales.Total:0.00}")</p>
+}
 
 @code {
+
+    private ClientHub.Sales _sales;
+
+    override protected async Task OnInitializedAsync()
+    {
+        await Refresh();
+        await base.OnInitializedAsync();
+    }
+
+    private async Task Refresh()
+    {
+        var hub = await ClientHub.GetStartedHubAsync(NavManager);
+        _sales = await hub.RequestSalesAsync();
+        await InvokeAsync(StateHasChanged);
+    }
+
 }
