--- a/Modules/Reporting/Client/Components/SalesReport.razor
+++ b/Modules/Reporting/Client/Components/SalesReport.razor
@@ -1,4 +1,5 @@
-﻿@inject NavigationManager NavManager
+﻿@inject IJSRuntime Js
+@inject NavigationManager NavManager
 
 @if (_sales != null)
 {
@@ -19,11 +20,14 @@
             }
             else
             {
-                <tr>
-                    <td>2004-03-02 12:32</td>
-                    <td>Some stuff</td>
-                    <td>£123.00</td>
-                </tr>
+                @foreach (var sale in _sales.Items)
+                {
+                    <tr>
+                        <td>@sale.WhenUtc.ToLocalTime().ToString("yyyy-MM-dd HH:mm:ss")</td>
+                        <td>@sale.Description</td>
+                        <td>@($"£{sale.Amount:0.00}")</td>
+                    </tr>
+                }
             }
         </tbody>
     </table>
@@ -35,10 +39,16 @@
 
     private ClientHub.Sales _sales;
 
-    override protected async Task OnInitializedAsync()
+    protected override async Task OnInitializedAsync()
     {
         await Refresh();
         await base.OnInitializedAsync();
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        await base.OnAfterRenderAsync(firstRender);
+        await Js.InvokeVoidAsync("resizeIframe");
     }
 
     private async Task Refresh()
