Ensured dashboard i-frame resizes correctly.

--- a/Modules/Reporting/Server/Pages/_Control.cshtml
+++ b/Modules/Reporting/Server/Pages/_Control.cshtml
@@ -27,6 +27,7 @@
     <script src="~/_content/MfePoc.Shared/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/_content/MfePoc.Shared/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/_content/MfePoc.Shared/js/mfeNotify.js" asp-append-version="true"></script>
+    <script src="~/_content/MfePoc.Shared/js/resizeIframe.js" asp-append-version="true"></script>
 
     <script src="/Mixing/_framework/blazor.webassembly.js"></script>
 
