--- a/Modules/Reporting/Client/Components/SalesReport.razor
+++ b/Modules/Reporting/Client/Components/SalesReport.razor
@@ -34,7 +34,7 @@
         <thead>
             <tr>
                 <th colspan="2"></th>
-                <th style="text-align:right;">Total</th>
+                <th style="padding-top:20px; text-align:right;">Total</th>
             </tr>
         </thead>
         <tbody>
