Added link to the associated article.

--- a/Home/Views/Home/Index.cshtml
+++ b/Home/Views/Home/Index.cshtml
@@ -33,6 +33,10 @@
     </a>
 </p>
 <p>
+    Article:
+    <a href="https://rgbco.uk/articles/microFrontends" target="mfepoc_article">open in new window</a>
+</p>
+<p>
     Modules:
     <ul>
         @foreach (var warmupUrl in warmupUrls)
